manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-docker-app
  namespace: default
spec:
  selector:
    app: nodejs-docker-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
