manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-docker-app
  namespace: liberty-rest
spec:
  to:
    kind: Service
    name: nodejs-docker-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
